--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".view.ForecastFragment">
+    tools:context=".view.ForecastFragment"
+    android:elevation="2dp">
 
     <TextView
         android:id="@+id/textForecast1"
