--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,10 @@
     <dimen name="font_large">72sp</dimen>
     <dimen name="font_normal">15sp</dimen>
     <dimen name="font_small">12sp</dimen>
+    <dimen name="font_title">20sp</dimen>
+
+    <!-- margin sizes -->
+    <dimen name="margin_content_start_primary">16dp</dimen>
+    <dimen name="margin_content_start_secondary">72dp</dimen>
 
 </resources>
